# ChromaHD-paravision

./: .gitignore  README.md  config.yaml  flake.nix  pvrun  requirements.txt  setup.cfg  setup.py  shell.nix
examples/cuboid/: vis_0.pvtu  vis_0_0.vtu
examples/cyl-4-rngout/: README.md
examples/cylinder-4-output/: bead_loading.inf  bead_loading.xyzr  config.yaml  mass_0.pvtu  mass_0_0.vtu  mass_1.pvtu  mass_10.pvtu  mass_10_0.vtu  mass_1_0.vtu  mass_2.pvtu  mass_2_0.vtu  mass_3.pvtu  mass_3_0.vtu  mass_4.pvtu  mass_4_0.vtu  mass_5.pvtu  mass_5_0.vtu  mass_6.pvtu  mass_6_0.vtu  mass_7.pvtu  mass_7_0.vtu  mass_8.pvtu  mass_8_0.vtu  mass_9.pvtu  mass_9_0.vtu
examples/cylinder-4-rngout/: rngout_0.pvtu  rngout_0_0.vtu  rngout_1.pvtu  rngout_10.pvtu  rngout_10_0.vtu  rngout_1_0.vtu  rngout_2.pvtu  rngout_2_0.vtu  rngout_3.pvtu  rngout_3_0.vtu  rngout_4.pvtu  rngout_4_0.vtu  rngout_5.pvtu  rngout_5_0.vtu  rngout_6.pvtu  rngout_6_0.vtu  rngout_7.pvtu  rngout_7_0.vtu  rngout_8.pvtu  rngout_8_0.vtu  rngout_9.pvtu  rngout_9_0.vtu
paravision/: __init__.py  animate.py  bead_loading.py  bed_info.py  chromatogram.py  chromoo.py  column_snapshot.py  column_snapshot_fast.py  configHandler.py  defaults.py  grm2d.py  hotspot-counter.py  hotspots.py  infogeneric.py  integrate.py  log.py  mass_flux.py  mesh_info.py  plot_over_line.py  project.py  radial_porosity.py  radial_shell_flux.py  radial_shell_integrate.py  save-projection.py  save_projection.py  screenshot.py  screenshot_with_edges.py  shell_chromatograms.py  utils.py  velocity_divergence.py  volume_integral.py
(+55 files in other folders)
