[metadata]
name = paravision
version = 0.1
author = Jayghosh Rao
author_email = j.rao@fz-juelich.de
description = ParaView script wrappers for chromatography
long_description = file: README.md
long_description_content_type = text/markdown
url = https://jugit.fz-juelich.de/IBG-1/ModSim/Chroma-HD/paravision
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.21
    matplotlib>=3.4
    addict>=2.4
    rich>10.15
    ruamel.yaml
    fuzzywuzzy
scripts = pvrun
